src/test/resources/invalid/NoExtentionTestClass.java
import java.util.ArrayList;

import io.higgs.spi.ProviderFor;

@ProviderFor(ArrayList.class)
public class NoExtentionTestClass {
}
